<resources>
    <string name="app_name">Android-Learning-Trace</string>
    <string name="basicUI_showActivity_tv">Basic UI Component</string>
    <string name="basicUI_p1_showActivity_p1_btn">Part 1 Toast TextView Button</string>
    <string name="basicUI_showTextToast">Show Text Toast</string>
    <string name="basicUI_showImageToast">Show Image Toast</string>
    <string name="basicUI_showTextImageToast">Show Image And Text Toast</string>
    <string name="basicUI_text_toast">Toast message.</string>
    <string name="basicUI_text_image_toast">Show image toast message.</string>
    <string name="basicUI_editText">EditText</string>
    <string name="basicUI_toast_area">Toast function area:</string>
    <string name="basicUI_textview_area">TextView function area:</string>
    <string name="basicUI_button_area">Button function area:</string>
    <string name="basicUI_textbutton">Text Button</string>
    <string name="basicUI_imageButton">Image button</string>
    <string name="basicUI_tpButton">Transparent button</string>
    <string name="basicUI_btn_selector">Button selector</string>
    <string name="textview">TextView</string>
    <string name="basicUI_showActivity_p2_button">Part 2 CheckButton RadioButton RadioGroup Toggle Switch RatingBar</string>
    <string name="imageview_function_area">ImageView function area:</string>
    <string name="imageview_test_picture">ImageView test picture.</string>
    <string name="basicUI_checkbox_area">Checkbox function area:</string>
    <string name="checkbox1">CheckBox1</string>
    <string name="checkbox2">CheckBox2</string>
    <string name="checkbox3">CheckBox3</string>
    <string name="basicUI_show_ct_status">Show checkbox status.</string>
    <string name="radio_function_area">Radio function area:</string>
    <string name="radiobutton1">RadioButton1</string>
    <string name="radiobutton2">RadioButton2</string>
    <string name="radiobutton3">RadioButton3</string>
    <string name="togglebutton_function_area">ToggleButton function area:</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="Switch_text">Switch</string>
    <string name="ratingbar_function_area">RatingBar function area:</string>
    <string name="spinner_function_area">Spinner function area:</string>
    <string name="part_3">Part 3</string>
    <string name="part_4">Part 4</string>
    <string name="autocompletetextview_function_area">AutoCompleteTextView function area:</string>
    <string name="email_provider">Email provider</string>
    <string name="progressbar_function_area">ProgressBar function area:</string>
    <string name="show_progress_bar_info">Show progress bar info</string>
    <string name="increase_progress_bar">Increase Progress Bar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="alertdialog_function_area">AlertDialog function area:</string>
    <string name="alertdialog">AlertDialog</string>
    <string name="list_alertdialog">List AlertDialog</string>
    <string name="multichoice_dialog">Multichoice dialog</string>
    <string name="singlechoice_dialog">SingleChoice Dialog</string>
    <string name="customized_dialog">Customized Dialog</string>
    <string name="time_picker_function_area">Time picker function area:</string>
    <string name="time">time:</string>
    <string name="show_timepicker">Show Timepicker</string>
    <string name="show_datepicker">Show DatePicker</string>
    <string name="no_date">No date</string>
    <string name="datepicker_function_area">DatePicker function area:</string>
    <string name="part_5">Part 5 GridView</string>
    <string name="advanced_ui_component">Advanced UI Component</string>
    <string name="gridview_function_area">GridView Function area</string>
    <string name="gridview_function_area_2">GridView function area 2:</string>
    <string name="part_6">Part 6 GridView With Text</string>
    <string name="part_7">Part 7 ListView</string>
    <string name="listview_function_area1">ListView function area:</string>
    <string name="part_8_listactivity">Part 8 ListActivity</string>
    <string name="part_9_selected_listview">Part 9 Selected ListView</string>
    <string name="part_10_imagetext_listview">Part 10 ImageText ListView</string>
    <string name="part_11_simpleadapter_listview">Part 11 SimpleAdapter ListView</string>
    <string name="part_12_multipages_listview">Part 12 Multipages Listview</string>
    <string name="title">title</string>
    <string name="content">content</string>
    <string name="loading">Loading</string>
    <string name="part_13_expandablelistview">Part 13 ExpandableListView</string>
    <string name="part_14_imageswitcher">Part 14 ImageSwitcher</string>
    <string name="part_15_viewflipper">Part 15 ViewFlipper</string>
    <string name="part_16_menus">Part 16 Menus</string>
    <array name="city">
        <item>Hamilton</item>
        <item>Toronto</item>
        <item>Windsor</item>
    </array>

    <array name="email_surfix">
        <item>gmail</item>
        <item>hotmail</item>
        <item>microsoft</item>
        <item>humail</item>
    </array>

    <array name="name">
        <item>Jason</item>
        <item>Tom</item>
        <item>Jack</item>
        <item>Bob</item>
        <item>Ken</item>
        <item>Peter</item>
        <item>Jason</item>
        <item>Tom</item>
        <item>Jack</item>
        <item>Bob</item>
        <item>Ken</item>
        <item>Peter</item>
        <item>Jason</item>
        <item>Tom</item>
        <item>Jack</item>
        <item>Bob</item>
        <item>Ken</item>
        <item>Peter</item>
        <item>Jason</item>
        <item>Tom</item>
        <item>Jack</item>
        <item>Bob</item>
        <item>Ken</item>
        <item>Peter</item>
        <item>Jason</item>
        <item>Tom</item>
        <item>Jack</item>
        <item>Bob</item>
        <item>Ken</item>
        <item>Peter</item>

    </array>
    <string name="game">Game</string>
    <string name="video">Video</string>
    <string name="youtube">Youtube</string>
    <string name="exit">Exit</string>
    <string name="long_press_me_for_setting_background_color">Long press me for setting background color.</string>
    <string name="set_size">Set size</string>
    <string name="show_popup_window">Show popup window</string>
    <string name="core_feature">Core Feature</string>
    <string name="part_24_activity_concept">Part 24 Activity Concept</string>
    <string name="part25_intent">Part25 Intent</string>
    <string name="part26_service">Part26 Service</string>

    <array name="activity_mode">
        <item>Standard</item>
        <item>SingleTop</item>
        <item>SingleTask</item>
        <item>NewTask</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
