<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.ui.Part1TextView_Toast_ButtonActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/basicUI_toast_area" />

    <Button
        android:id="@+id/btn_basicUI_showTextToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basicUI_showTextToast" />

    <Button
        android:id="@+id/btn_basicUI_showImageToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basicUI_showImageToast" />

    <Button
        android:id="@+id/btn_basicUI_showTextImageToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basicUI_showTextImageToast" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/basicUI_textview_area" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview" />

    <EditText
        android:id="@+id/etv_basicUI_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_toast_image"
        android:ems="10"
        android:hint="@string/basicUI_editText"
        android:drawableStart="@drawable/ic_toast_image"
        android:inputType="text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/basicUI_button_area" />

    <Button
        android:id="@+id/btn_textButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basicUI_textbutton" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/basicUI_imageButton"
        android:src="@android:drawable/btn_minus" />

    <Button
        android:id="@+id/btn_tpButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:text="@string/basicUI_tpButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/basicUI_btn_selector" />

</LinearLayout>