<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_game"
        android:icon="@android:drawable/ic_media_play"
        android:orderInCategory="0"
        android:title="@string/game"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_video"
        android:orderInCategory="1"
        android:title="@string/video"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_youtube"
        android:orderInCategory="2"
        android:title="@string/youtube"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_exit"
        android:orderInCategory="4"
        android:title="@string/exit"
        app:showAsAction="ifRoom" />

</menu>