<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.BasicUIComponentActivity">

    <Button
        android:id="@+id/btn_basicUI_showTextToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basicUI_showTextToast" />

    <Button
        android:id="@+id/btn_basicUI_showImageToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basicUI_showImageToast" />

    <Button
        android:id="@+id/btn_basicUI_showTextImageToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basicUI_showTextImageToast" />

</LinearLayout>